welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if (lM = "A")
               ^BDRBuggle:7: error: type mismatch;
 found   : Unit
 required: Boolean
	if (lM = "B")
               ^BDRBuggle:10: error: type mismatch;
 found   : Unit
 required: Boolean
	if (lM = "C")
               ^BDRBuggle:14: error: type mismatch;
 found   : Unit
 required: Boolean
	if (lM = "R")
               ^BDRBuggle:17: error: type mismatch;
 found   : Unit
 required: Boolean
	if (lM = "L")
               ^BDRBuggle:20: error: type mismatch;
 found   : Unit
 required: Boolean
	if (lM = "I")
               ^BDRBuggle:24: error: type mismatch;
 found   : Unit
 required: Boolean
	if (lM = "Z")
               ^BDRBuggle:26: error: type mismatch;
 found   : Unit
 required: Boolean
	if (lM = "Y")
               ^BDRBuggle:29: error: type mismatch;
 found   : Unit
 required: Boolean
	if (lM = "X")
               ^